<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">whoami</string>
    <string name="hello_world">Hello world!</string>
    <string name="receiver">收件邮箱</string>
    <string name="send">发送</string>
    <string name="email_hint">多地址请用;分隔</string>
    <string name="subject">主题</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="content">内容</string>
    <string name="login_img">登录账户图片</string>
    <string name="regist">注册</string>
    <string name="login">登陆</string>
    <string name="forget_password">忘记密码?</string>
    <string name="timeline_menu">timeline菜单</string>
    <string name="me">我</string>
    <string name="timeline_inittext">\.\.\.</string>
    <string name="calloff">取消</string>
    <string name="sure">确定</string>
    <string name="uid">UID</string>
    <string name="uid_colon">uid: </string>
    <string name="mail_colon">邮箱: </string>
    <string name="gender_colon">性别: </string>
    <string name="province_colon">省市: </string>
    <string name="birthday_colon">生日: </string>
    <string name="phone_colon">电话: </string>
    <string name="password_colon">密码: </string>
    <string name="password_confirm_colon">确认密码: </string>
    <string name="change">修改</string>
    <string name="password_change"><u>修改</u></string>
    <string name="male">汉子</string>
    <string name="female">妹子</string>
    <string name="gender_unset">路人甲</string>
    <string name="password_old">输入旧密码</string>
    <string name="password_new">新密码</string>
    <string name="password_new_confirm">确认新密码</string>
    <string name="timeline_newmsg">新建消息</string>
    <string name="timeline_replymsg">回复uid</string>
    <string name="timeline_readme">Readme</string>
    <string name="readme_title">使用说明</string>
    <string name="readme_content">应用提供了二种发消息的方式：\n1 新建消息: 已知对方邮箱，主动发消息.\n2 回复uid: 已知对方uid, 进行回复.\n\n如有需要,服务号uid: 10001</string>
    
    <!-- for depends -->
    <string name="appwall">应用墙</string>
    
    <string name="demo_msg_content_long">"电子工业出版社，哥伦比亚大学yoyofeeertewtrtttttttttttttttttttttttttttttttttttttttttter"</string>
    <string name="demo_msg_content_short">"电子工业出版社，哥伦比亚大学"</string>
    <string name="demo_msg_datetime">2014-05-29 19:18:32</string>

</resources>
