<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/layout_wdj_banner"/>
    <include layout="@layout/backto_topbar" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" >

        <TableRow
            android:layout_marginTop="5dp"
            android:paddingBottom="5dp" >

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/mail_colon" />

            <EditText
                android:id="@+id/mail"
                style="@style/round_editable_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="8" />
        </TableRow>

        <TableRow android:paddingTop="2dp" >

            <TextView
                android:layout_gravity="left|center"
                android:layout_marginLeft="10dp"
                android:text="@string/gender_colon" />

            <RadioGroup
                android:id="@+id/gender_group"
                android:layout_gravity="left|center"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/genderbt_male"
                    android:checked="true"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/genderbt_female"
                    android:text="@string/female" />
                
                <RadioButton
                    android:id="@+id/genderbt_unset"
                    android:text="@string/gender_unset" />
            </RadioGroup>
        </TableRow>

        <TableRow android:layout_marginTop="5dp"
            android:layout_width="match_parent" >

            <TextView
                android:layout_gravity="left|center"
                android:layout_marginLeft="10dp"
                android:text="@string/province_colon" />

            <Spinner
                android:id="@+id/provinces_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/provinces"
                android:paddingBottom="2dp"
                android:paddingTop="2dp" />
        </TableRow>


        <TableRow android:layout_marginTop="5dp" >

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/phone_colon" />

            <EditText
                android:id="@+id/phone"
                style="@style/round_editable_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:layout_weight="8" />
        </TableRow>

        <TableRow android:layout_marginTop="5dp" >

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/password_colon" />

            <EditText
                android:id="@+id/password"
                style="@style/round_editable_text"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="8" />
        </TableRow>
        
        <TableRow android:layout_marginTop="5dp" >

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/password_confirm_colon" />

            <EditText
                android:id="@+id/password_confirm"
                style="@style/round_editable_text"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="8" />
        </TableRow>

        <TableRow
            android:layout_marginTop="5dp"
            android:gravity="center" >

            <Button
                android:id="@+id/submit_bt"
                style="@style/button_round"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sure" />
        </TableRow>
    </TableLayout>

</LinearLayout>