<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/layout_wdj_banner"/>
    <include layout="@layout/backto_topbar" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:background="@color/white" >

        <EditText
            android:id="@+id/password_old"
            style="@style/edittext_bottomline"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/password_old" />

        <EditText
            android:id="@+id/password_new"
            style="@style/edittext_bottomline"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:hint="@string/password_new" />

        <EditText
            android:id="@+id/password_new_confirm"
            style="@style/edittext_bottomline"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:hint="@string/password_new_confirm" />

        <TableRow android:layout_marginTop="30dp"
            android:gravity="center" >

            <Button
                android:id="@+id/password_change_commit"
                style="@style/button_round"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:onClick="passwordChange"
                android:text="@string/sure" />
        </TableRow>
    </TableLayout>

</LinearLayout>